--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=netxtflow;Username=root;Password=Dev123"
+  },
+  "JwtSettings": {
+    "Key": "akjhdaahjkdaskjdahsdkjahskjdashdjkahsjkashkjdajkhsahjks#"
+  }
 }
