--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=netxtflow;Username=root;Password=Dev123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=netxtflow;Username=postgres;Password=SuaSenhaForte123"
   },
   "JwtSettings": {
     "Key": "akjhdaahjkdaskjdahsdkjahskjdashdjkahsjkashkjdajkhsahjks#"
