finalizado o desenvolvimento dos controllers e services do contexto de vendas

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ bin/
 obj/
 out/
 
+
 # User-specific files
 *.user
 *.userosscache
@@ -44,6 +45,8 @@ artifacts/
 # Dotnet tools
 .dotnet_toolchain/
 *.global.json
+# appsettings.json
+# appsettings.*.json
 
 # ASP.NET and MVC-specific
 wwwroot/
