--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5001"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
