--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=netxtflow;Username=postgres;Password=SuaSenhaForte123"
+     "DefaultConnection": "Host=localhost;Port=5432;Database=nextflow;Username=postgres;Password=SuaSenhaForte123"
   },
   "JwtSettings": {
     "Key": "akjhdaahjkdaskjdahsdkjahskjdashdjkahsjkashkjdajkhsahjks#"
